--- a/index.html
+++ b/index.html
@@ -18,8 +18,18 @@
 <body>
   <div class="grid-container">
   <nav class="menu" data-menu="suave">
-    <ul>
+    <button data-menu="button" aria-expanded="false" aria-controls="menu">Menu</button>
+    <ul data-menu="list" id="menu">
       <li><a href="#animais">Animais</a></li>
+      <li data-dropdown>
+        <a href="sobre.html">Sobre</a>
+        <ul class="dropdown-menu">
+          <li><a href="empresa.html">A Empresa</a></li>
+          <li><a href="equipe.html">Equipe</a></li>
+          <li><a href="socios.html">Sócios</a></li>
+          <li><a href="investidores.html">Investidores</a></li>
+        </ul>
+      </li>
       <li><a href="#faq">Faq</a></li>
       <li><a href="#contato">Contato</a></li>
       <li><a data-modal="abrir" href="login.html">Logion ➙</a></li>
