--- a/index.html
+++ b/index.html
@@ -123,6 +123,28 @@
       <dd>Também apresentam como particularidade suas pupilas ovais, semelhantes às pupilas verticais dos felídeos.</dd>
     </dl>
   </section>
+  
+  <section class="grid-section numeros" data-anime="scroll">
+    <h1 class="titulo">Números</h1>
+    <div class="numeros-grid">
+      <div class="numeros-animal">
+        <h3>Lobos</h3>
+        <span data-numero>5689</span>
+      </div>
+      <div class="numeros-animal">
+        <h3>Raposas</h3>
+        <span data-numero>854</span>
+      </div>
+      <div class="numeros-animal">
+        <h3>Esquilos</h3>
+        <span data-numero>25489</span>
+      </div>
+      <div class="numeros-animal">
+        <h3>Ursos</h3>
+        <span data-numero>519</span>
+      </div>
+    </div>
+  </section>
 
   <section class="grid-section contato" data-anime="scroll" id="contato">
     <h1 class="titulo">contato</h1>
