--- a/index.html
+++ b/index.html
@@ -156,6 +156,7 @@
       <li>+55 (61) 9999-9999</li>
       <li>Rua do Conde, n° 20</li>
       <li>Brasília - DF</li>
+      <li data-semana="1,2,3,4,5" data-horario="8,18">Seg à Sex das 8h às 18h</li>
     </ul>
   </section>
 
